Timer用上新接口。